# katachi

./: README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: settings_demo.py
katachi/: __init__.py  errors.py  markers.py  persistence.py  schema.py  validation.py
katachi/tk/: __init__.py  dialog.py  form.py  motion.py  scroll.py  theme.py
tests/: test_motion.py  test_persistence.py  test_schema.py  test_scroll.py  test_theme.py  test_tk_form.py  test_validation.py
