[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "katachi"
version = "0.1.0"
description = "dataclassと型ヒントから設定画面を生成する、依存ゼロの宣言型GUIライブラリ"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "miruky" }]
requires-python = ">=3.12"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: User Interfaces",
]

[project.urls]
Repository = "https://github.com/miruky/katachi"

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6"]

[tool.hatch.build.targets.wheel]
packages = ["katachi"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
